hphp/hack/test/typecheck/shape_self_class_const_mismatch.php.exp
File "shape_self_class_const_mismatch.php", line 15, characters 19-32:
The field \OtherClass::KEY_NAME is undefined (Typing[4108])
File "shape_self_class_const_mismatch.php", line 14, characters 27-33:
Definition is here
